<resources>
    <string name="app_name">ET合约</string>
    <string name="login_ID">登录账号</string>
    <string name="Mobile_phone_number_email">手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="phoenumber_or_email_account">请输入手机号或邮箱账号</string>
    <string name="verification_code">验证码</string>
    <string name="Please_enter_verification_code">请输入验证码</string>
    <string name="enter_your_PIN">请输入密码</string>
    <string name="enter_your_PIN_1">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="forget_the_password">忘记密码？</string>
    <string name="forget_the_password_">忘记密码</string>
    <string name="register">还没有账号，立即注册</string>
    <string name="get_cot">获取验证码</string>
    <string name="menu_msg">首页</string>
    <string name="menu_contact">钱包</string>
    <string name="menu_find">合约</string>
    <string name="my">我的</string>
    <string name="Appointment_contract">预约合约</string>
    <string name="To_perform_the_contract">执行合约</string>
    <string name="Contract_record">合约记录</string>
    <string name="biaoti">标题</string>
    <string name="money">金额</string>
    <string name="Please_select_contract_amount">请选择合约金额</string>
    <string name="phone">手机号</string>
    <string name="payment_code">支付密码</string>
    <string name="payment_code_ok">确认支付密码</string>
    <string name="phoenumber_payment_code_ok">请输入支付密码</string>
    <string name="phoenumber_payment_code_ok_0">请再次输入支付密码</string>
    <string name="Invitation_code">邀请码</string>
    <string name="Please_enter_the_invitation_code">请输入邀请码</string>
    <string name="Please_enter_your_cell_phone_number">请输入手机号</string>
    <string name="confirm_password">确认密码</string>
    <string name="launchGallery">图库选取</string>
    <string name="lanuchCapture">拍照选取</string>
    <string name="dialog_cancel">取消</string>
    <string name="permission_write_storage_rationale">拍照需要存储权限</string>
    <string name="permission_write_storage_rationale1">拍照时需要相机权限</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permissions_prohibited">权限被禁止</string>
    <string name="permission_text_a0">提示</string>
    <string name="permission_text_a1">取消</string>
    <string name="permission_text_a2">权限设置</string>
    <string name="permission_text_a3"><Data><![CDATA[权限修改向导: 点击“权限设置”>  <font color="#ff0000"><b>“权限”</b></font>，授予对应权限]]></Data></string>
    <string name="permission_text_a6">储存权限&#160;&#160;&#160;&#160;</string>
    <string name="permission_text_a8">当前应用需要获取以下权限,否则可能造成此应用功能异常</string>
    <string name="Please_enter_nickname">请输入昵称</string>
    <string name="balance">余额</string>
    <string name="rental">总额</string>
    <string name="usable">可用</string>
    <string name="convert">折合(USDT)</string>
    <string name="top_up">充值</string>
    <string name="Mention_money">提币</string>
    <string name="record">记录</string>
    <string name="USDT_assets">USDT资产</string>
    <string name="Binding_address">绑定地址</string>
    <string name="revision_Binding_address">修改地址</string>
    <string name="USDT_address">USDT地址</string>
    <string name="Please_enter_the_USDT_address">请输入USDT地址</string>
    <string name="USDT_address_binding">USDT地址绑定</string>
    <string name="confirm">确定</string>
    <string name="Copy_the_address">复制地址</string>
    <string name="The_wallet_address">钱包地址</string>
    <string name="Please_enter_your_wallet_address">请输入钱包地址</string>
    <string name="Withdrawal_amount">提币金额</string>
    <string name="my_team">我的团队</string>
    <string name="Friends_share">分享好友</string>
    <string name="personal_data">个人资料</string>
    <string name="Node_returns">节点收益</string>
    <string name="Change_login_password">修改登录密码</string>
    <string name="Set_security_password">设置安全密码</string>
    <string name="Security_Centercon">安全中心</string>
    <string name="gain_recording">收益记录</string>
    <string name="set_password">密码设置</string>
    <string name="feedback">意见反馈</string>
    <string name="version_information">版本信息</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="Please_enter_your_new_password">请输入新密码</string>
    <string name="Confirm_new_password">确认新密码</string>
    <string name="Please_enter_your_new_password_again">请再次输入新密码</string>
    <string name="Please_enter_the_original_password">请输入原密码</string>
    <string name="login_password">登录密码</string>
    <string name="security_code">安全密码</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="transfer">转账</string>
    <string name="HOPE_the_asset">资产</string>
    <string name="quit">退出</string>
    <string name="cancel">取消</string>
    <string name="announcement">公告</string>
    <string name="not_bound">未绑定</string>
    <string name="make">预约中</string>
    <string name="convert_init">折合（USDT）</string>
    <string name="The_two_password_do_not_match">两次密码不一致</string>
    <string name="Content_of_the_feedback">请输入反馈内容，我们会为您提供更好的服务。</string>
    <string name="team">团队</string>
    <string name="Active_member">有效会员</string>
    <string name="performance">团队业绩</string>
    <string name="To_make_an_appointment_in">预约中</string>
    <string name="To_make_an_appointment_in_1">预约成功，匹配中</string>
    <string name="Take_out_the_principal_and_interest_countdown">合约状态</string>
    <string name="Appointment_success_time">预约成功时间</string>
    <string name="The_contract_amount">合约金额</string>
    <string name="Enter_security_password">请输入安全密码</string>
    <string name="please_fill_in_the_account_number">请填写对方账号</string>
    <string name="Please_fill_in_the_transfer_amount">请填写转出金额，不得小于10</string>
    <string name="currency">币种</string>
    <string name="Have_people">类型：</string>
    <string name="time">时 间:</string>
    <string name="time1">时 间</string>
    <string name="number">账号</string>

    <string name="Is_binding">已绑定</string>
    <string name="Please_enter_amount">请输入金额</string>
    <string name="Matching_success_time">匹配成功时间</string>
    <string name="Execution_success_time">执行成功时间</string>
    <string name="Contract_completion_time">合约完成时间</string>
    <string name="Contract_completed">合约已完成</string>
    <string name="words_remaining">剩余字数：</string>
    <string name="USDT">USDT</string>
    <string name="HOPE">HOPE</string>
    <string name="The_balance_can_be_transferred_out">可转出余额</string>
    <string name="Revenue_generated">已产生的收益</string>
    <string name="Revenue_being_booked">正在预约中的收益</string>
    <string name="Cancelled_earnings">已取消的收益</string>
    <string name="message">公告内容</string>
    <string name="Minimum_password_length">密码长度最低6位数</string>
    <string name="The_two_payment_passwords_are_inconsistent">两次支付密码不一致</string>
    <string name="Paymentpassword_length_minimum_6_digits">支付密码长度最低6位数</string>
    <string name="site">地址</string>
    <string name="Open_contract_currency">预约合约币种</string>
    <string name="maximum_execution_time">最长执行时间</string>
    <string name="daily_return_rate">日收益率</string>
    <string name="The_reservation_deposit">预约定金</string>
    <string name="payment">尾款</string>
    <string name="Successful_reservation_days">预约成功天数</string>
    <string name="The_match_is_successful">匹配成功，请执行合约</string>
    <string name="Countdown_to_execution">执行合约倒计时</string>
    <string name="Execute_the_contract_currency">执行合约币种</string>
    <string name="Days_of_actual_earnings">实际收益天数</string>
    <string name="Strike_price">执行合约价格</string>
    <string name="Execute_contract_price_countdown">执行合约价格倒计时</string>
    <string name="Quantity_of_executed_contract_currency">执行合约币种数量</string>
    <string name="Confirm_an_appointment">确认预约</string>
    <string name="Select_reservation_amount">选择预约金额</string>
    <string name="select">选择地址</string>
    <string name="all">全部</string>
    <string name="service_charge">注：转出需支付</string>
    <string name="head_portrait">头像</string>
    <string name="Mobile_phone_registered">手机注册</string>
    <string name="Registered_mail">邮箱注册</string>
    <string name="nickname">昵称</string>
    <string name="Confirm_security_password">确认安全密码</string>
    <string name="compile">编辑</string>
    <string name="an_appointment">暂无合约，请预约</string>
    <string name="Union_community">ET 联盟社区</string>
    <string name="The_latest_contract">最新合约</string>
    <string name="Give_it_a_try">在试一试</string>
    <string name="loading">正在加载</string>
    <string name="Working_on_loading">正在努力加载中...</string>
    <string name="mailbox">邮箱</string>
    <string name="Please_enter_email">请输入邮箱</string>
    <string name="Generated_income">已产生收益</string>
    <string name="Contract_executed_successfully">合约执行成功</string>
    <string name="prospective_earnings">预期收益</string>
    <string name="Make_an_appointment_to_currency">预约币种</string>
    <string name="To_perform_currency">执行币种</string>
    <string name="language_switch">语言切换</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="language_auto">自动</string>
    <string name="language_traditional">繁體中文</string>
    <string name="text69">复制成功</string>
    <string name="address_binding">地址绑定</string>
    <string name="please_enter">请输入</string>
    <string name="tet1">注册</string>
    <string name="ts1">&#037;</string>
    <string name="tets1">最少提币100</string>
    <string name="ter">今日预约比例</string>
    <string name="ets">不再提示</string>

    <string name="t1">动态收益</string>
    <string name="t2">节点</string>
    <string name="t3">合约本金</string>
    <string name="test2">已有账号，立即登录</string>
    <string name="terd">静态收益</string>
    <string name="t4">超级节点</string>
    <string name="t6">推荐超级节点</string>
    <string name="bizhong">币种</string>
    <string name="shouxufen">手续费</string>
    <string name="code">秒后可重发</string>
    <string name="chongxin">重新获取验证码</string>
    <string name="terad">支付订单倒计时</string>
    <string name="tesd">预约合时币种价格</string>
    <string name="erda">预约币种数量</string>
    <string name="ette">预约时间</string>
    <string name="te245">温馨提示 ：12小时未补齐则收益减半，24小时未补齐扣除全部预约金</string>
    <string name="p1">匹配中</string>
    <string name="p2">时间已终止</string>
    <string name="zayt">再按一次退出程序</string>
    <string name="tes4">请核对好充值地址,如因地址错误造成的损失无法挽回，平台概不负责</string>
    <string name="Quick_top_up">Etoken快速充值</string>
    <string name="tes78">恭喜你啊 验证成功 可以搞事情了</string>
    <string name="tet31">你有80%的可能是机器人，现在走还来得及</string>
    <string name="ter56">按住按钮往右滑动,完成拼图验证</string>
    <string name="number1">账号：</string>
    <string name="remember">记住密码</string>
    <string name="updated_content">更新的内容</string>
    <string name="Transferred">划转</string>
    <string name="things_personal">个人资产</string>
    <string name="Pleasenter_the_transfer_amount">请输入划转金额</string>
    <string name="Reference_Asset">合约资产</string>
    <string name="frozen">释放资产</string>
    <string name="Currency_transfers">划转币种</string>
    <string name="Type_of_transfer">划转类型</string>
    <string name="Transfer_amount">划转金额</string>
    <string name="please_select">请选择</string>
    <string name="Transferto_mineral_machinery_assets">划转至矿机资产</string>
    <string name="Assets_to_freeze">划转至释放资产</string>
    <string name="Temporarily_not_opened">暂未开放</string>
    <string name="Transfer_to_personal_assets">划转至个人资产</string>
</resources>
