<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch.Vertical"
    android:background="@color/black"
    tools:context=".Activity.ForgetThePasswordActivity">

    <ImageView
        android:layout_width="@dimen/icon_width_height_30"
        android:layout_height="@dimen/icon_width_height_30"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:background="@mipmap/login_01" />

    <TextView
        style="@style/WrapWrap"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_the_password_"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        style="@style/WrapWrap"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/Mobile_phone_number_email"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_11" />

    <RelativeLayout

        android:layout_marginTop="@dimen/start_or_end_10"
        style="@style/MatchWrap.Horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="@dimen/start_or_end_10">


        <EditText

            android:id="@+id/et_phone"
            style="@style/WrapWrap"
            android:background="@null"
            android:hint="@string/phoenumber_or_email_account"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_get_cot"
            style="@style/WrapWrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/get_cot"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_14" />

    </RelativeLayout>

    <include layout="@layout/public_line" />

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="@dimen/start_or_end_10">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/verification_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_11" />

        <EditText
            android:layout_marginTop="@dimen/start_or_end_5"
            android:id="@+id/et_get_code"
            style="@style/MatchWrap"
            android:background="@null"
            android:hint="@string/Please_enter_verification_code"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/text_size_14" />


    </LinearLayout>

    <include layout="@layout/public_line" />

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="@dimen/start_or_end_5">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_11" />

        <EditText
            android:layout_marginTop="@dimen/start_or_end_5"
            android:id="@+id/et_password"
            style="@style/MatchWrap"
            android:background="@null"
            android:hint="@string/enter_your_PIN"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/text_size_14" />


    </LinearLayout>

    <include layout="@layout/public_line" />

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="@dimen/start_or_end_5">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_11" />

        <EditText
            android:layout_marginTop="@dimen/start_or_end_5"
            android:id="@+id/et_confirm_password"
            style="@style/MatchWrap"
            android:background="@null"
            android:hint="@string/enter_your_PIN_1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/text_size_14" />


    </LinearLayout>

    <include layout="@layout/public_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_or_end_10"
        android:layout_marginEnd="@dimen/start_or_end_10">

        <include layout="@layout/public_button1" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_t"
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/start_or_end_10"
        android:gravity="center"
        android:text="@string/test2"
        android:textColor="@color/orange" />


</LinearLayout>