<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch.Vertical"
    android:background="@color/black"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:layout_width="@dimen/icon_width_height_30"
        android:layout_height="@dimen/icon_width_height_30"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:background="@mipmap/login_01" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/icon_width_height_30">

        <TextView

            style="@style/WrapWrap"

            android:text="@string/login_ID"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_language"
            style="@style/WrapWrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/language_cn"
            android:textColor="@color/white" />


    </RelativeLayout>


    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="30dp">

        <TextView

            style="@style/WrapWrap"
            android:text="@string/Mobile_phone_number_email"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12" />

        <RelativeLayout
            android:id="@+id/Rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_phone"
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/start_or_end_5"
                android:layout_marginBottom="@dimen/start_or_end_5"
                android:layout_toStartOf="@+id/tva"
                android:background="@null"
                android:hint="@string/Please_enter_your_cell_phone_number"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tva"
                android:layout_alignParentRight="true"
                style="@style/WrapWrap"
                android:text="\u25B2"
                android:textColor="@color/orange" />
        </RelativeLayout>


    </LinearLayout>

    <include layout="@layout/public_line" />

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_password"
            style="@style/MatchWrap"
            android:layout_marginTop="@dimen/start_or_end_5"
            android:layout_marginBottom="@dimen/start_or_end_5"
            android:background="@null"
            android:hint="@string/enter_your_PIN"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="@dimen/text_size_16" />


    </LinearLayout>

    <include layout="@layout/public_line" />

    <LinearLayout
        android:id="@+id/ll_verification_code"
        style="@style/MatchWrap.Vertical"
        android:visibility="gone">


        <TextView
            style="@style/WrapWrap"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/verification_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12" />

        <RelativeLayout
            style="@style/MatchWrap.Horizontal"
            android:layout_marginStart="30dp"

            android:layout_marginEnd="30dp">


            <EditText
                android:singleLine="true"
                android:id="@+id/et_code"
                style="@style/WrapWrap"
                android:layout_marginTop="@dimen/start_or_end_5"
                android:layout_marginBottom="@dimen/start_or_end_5"
                android:background="@null"
                android:hint="@string/Please_enter_verification_code"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tv_get_cot"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/get_cot"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_16" />

        </RelativeLayout>

        <include layout="@layout/public_line" />
    </LinearLayout>

    <CheckBox
        android:paddingLeft="10dip"
        android:button="@drawable/checkbox1"
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_width_height_30"
        android:layout_marginTop="@dimen/start_or_end_10"
        android:text="记住密码"
        android:textColor="@color/orange" />

    <include layout="@layout/public_button1" />

    <TextView
        android:id="@+id/tv_forget_the_password"
        style="@style/MatchWrap"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forget_the_password"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/MatchWrap"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/orange" />

</LinearLayout>