<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    style="@style/MatchMatch.Vertical"
    android:background="@color/black"
    tools:context=".Activity.HopePropertyActivityActivity">

    <include layout="@layout/public_title" />

    <RelativeLayout
        android:id="@+id/RL_Hope"
        style="@style/MatchWrap"
        android:layout_below="@+id/RL_Usdt"
        android:layout_marginTop="@dimen/icon_width_height_20"
        android:background="@color/black_01">

        <TextView
            android:id="@+id/Rl_banl"
            style="@style/WrapWrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_or_end_15"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:text="@string/HOPE"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_14" />

        <RelativeLayout
            android:id="@+id/Rl_ban2"
            style="@style/MatchWrap"
            android:layout_below="@+id/Rl_banl"
            android:layout_marginStart="@dimen/start_or_end_15"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:layout_marginTop="@dimen/icon_width_height_10">

            <TextView
                style="@style/WrapWrap"
                android:text="@string/balance"
                android:textColor="@color/p_white_test"
                android:textSize="@dimen/text_size_11" />

            <TextView
                style="@style/WrapWrap"
                android:layout_centerHorizontal="true"
                android:text="@string/make"
                android:textColor="@color/p_white_test"
                android:textSize="@dimen/text_size_11" />

            <TextView
                 android:textSize="@dimen/text_size_11"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/icon_width_height_20"
                android:text="@string/convert"
                android:textColor="@color/p_white_test" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/MatchWrap"
            android:layout_below="@+id/Rl_ban2"
            android:layout_marginStart="@dimen/start_or_end_15"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:layout_marginTop="@dimen/icon_width_height_10"
            android:paddingBottom="@dimen/icon_width_height_10">

            <TextView
                android:id="@+id/tv_rental"
                style="@style/WrapWrap"
                android:text=""
                android:textColor="@color/p_white" />

            <TextView
                android:id="@+id/tv_usable"
                style="@style/WrapWrap"
                android:layout_centerHorizontal="true"
                android:text=""
                android:textColor="@color/p_white" />

            <TextView
                android:id="@+id/tv_convert"
                style="@style/WrapWrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text=""
                android:textColor="@color/p_white" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout

        style="@style/MatchWrap.Horizontal"
        android:layout_marginTop="@dimen/icon_width_height_30">

        <Button
            android:id="@+id/btn_top_up"
            style="@style/AutoWrapbuttn"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:singleLine="true"
            android:text="@string/top_up"
            android:textSize="@dimen/text_size_12"

            />

        <Button
            android:id="@+id/btn_Mention_money"
            style="@style/AutoWrapbuttn"
            android:layout_marginStart="@dimen/start_or_end_15"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:layout_marginRight="@dimen/start_or_end_15"
            android:singleLine="true"
            android:text="@string/Mention_money"
            android:textSize="@dimen/text_size_12" />

        <Button
            android:id="@+id/btn_transfer"
            style="@style/AutoWrapbuttn"
            android:layout_marginStart="@dimen/start_or_end_15"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:singleLine="true"
            android:text="@string/transfer"
            android:textSize="@dimen/text_size_12" />

        <Button
            android:id="@+id/btn_record"
            style="@style/AutoWrapbuttn"
            android:layout_marginLeft="@dimen/start_or_end_15"
            android:layout_marginRight="@dimen/start_or_end_15"
            android:singleLine="true"
            android:text="@string/record"
            android:textSize="@dimen/text_size_12" />


    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icon_width_height_20"
        android:background="@color/black_b"
        android:divider="@color/black"
        android:dividerHeight="1dp">

    </ListView>
</LinearLayout>