<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="@dimen/start_or_end_5"
        android:paddingBottom="@dimen/start_or_end_5"
        android:background="#FF121E2E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/start_or_end_10"
            android:textSize="@dimen/text_size_12"
            android:id="@+id/tv_number"
            style="@style/AutoWrap"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/number"
            android:textColor="@color/white" />

        <TextView
            android:textSize="@dimen/text_size_12"
            android:id="@+id/tv_menu_find"
            style="@style/AutoWrap"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/menu_find"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginEnd="@dimen/start_or_end_10"
            android:textSize="@dimen/text_size_12"
            android:id="@+id/tv_time"
            style="@style/AutoWrap"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/time"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>